--- a/styles/RegistForms.css
+++ b/styles/RegistForms.css
@@ -32,9 +32,18 @@
     position: relative;
     right: 100px;
     top: 30px;
-    color: #948c7c;
+    color: #d3d9a5;
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
   }
+  p#loggedIn {
+    text-align: center;
+    /* border: 1px solid white; */
+    box-shadow: 0 10px 10px black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+}
   
 
 
