added scoreboard functionality

--- a/styles/RegistForms.css
+++ b/styles/RegistForms.css
@@ -1,15 +1,16 @@
 /* 
 *Sign-in and Sign-up buttons style 
 */
+
 #signbtns {
     display: block;
     position: relative;
     text-align: right;
     padding-left: 40%;
     padding-top: 10px;
-    
-  }
-  #signbtns a {
+}
+
+#signbtns a {
     border-radius: 10px;
     font-size: 14px;
     background-color: #948c7c98;
@@ -19,24 +20,26 @@
     color: white;
     box-shadow: -1px 1px #948c7c, -2px 2px #948c7c, -1px 1px #948c7c;
     border: 1px solid #948c7c;
-  }
-  
-  #signbtns a:hover {
+}
+
+#signbtns a:hover {
     background-color: rgba(84, 58, 92, 0.315);
     border-top: none;
     border-right: none;
     border-left: none;
     text-shadow: 0 0 14px #5c3c4c;
-  }
-  #signbtns p {
+}
+
+#signbtns p {
     position: relative;
     right: 100px;
     top: 30px;
     color: #d3d9a5;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-  }
-  p#loggedIn {
+}
+
+p#loggedIn {
     text-align: center;
     /* border: 1px solid white; */
     box-shadow: 0 10px 10px black;
@@ -44,8 +47,6 @@
     border-right: none;
     border-left: none;
 }
-  
-
 
 .formContainer {
     margin: auto;
@@ -62,6 +63,7 @@
     box-shadow: 0 0 10px 0 rgba(247, 244, 120, 0.692);
     height: 400px;
 }
+
 .forms h1 {
     padding: 20px;
     margin-bottom: 10px;
@@ -73,13 +75,15 @@
 ul.signInform {
     list-style-type: none;
     color: rgb(255, 255, 255);
-    text-shadow: 0 0 14px rgb(255, 54, 54);
+    /* text-shadow: 0 0 14px rgb(255, 54, 54); */
 }
+
 ul.signInform li {
     margin-top: 10px;
     margin-bottom: 50px;
     width: auto;
 }
+
 ul.signInform li input {
     background-color: white;
     border-radius: 5px;
@@ -89,6 +93,7 @@ ul.signInform li input {
     text-align: center;
     transition: width 1s;
 }
+
 ul.signInform button {
     box-shadow: 0 0 10px black;
     border-radius: 10px;
@@ -99,6 +104,7 @@ ul.signInform button {
     height: 30px;
     border: none;
 }
+
 ul.signInform button:hover {
     background-color: rgb(29, 145, 165);
 }
@@ -108,9 +114,11 @@ ul.signInform li input:hover {
     border-color: rgb(162, 0, 255);
 }
 
+
 /*
 * Sign Up Page design
  */
+
 
 /*
 *Sign up form styling
@@ -122,13 +130,15 @@ ul.signUpform {
     list-style-type: none;
     color: rgb(255, 255, 255);
     text-shadow: 0 0 14px rgb(255, 54, 54);
-  }
-  ul.signUpform li {
+}
+
+ul.signUpform li {
     margin-top: 10px;
     margin-bottom: 10px;
     width: auto;
-  }
-  ul.signUpform li input {
+}
+
+ul.signUpform li input {
     background-color: white;
     border-radius: 5px;
     padding-top: 10px;
@@ -136,8 +146,9 @@ ul.signUpform {
     width: 170px;
     text-align: center;
     transition: width 1s;
-  }
-  ul.signUpform button {
+}
+
+ul.signUpform button {
     box-shadow: 0 0 10px black;
     border-radius: 10px;
     background-color: rgb(82, 40, 82);
@@ -147,13 +158,25 @@ ul.signUpform {
     height: 30px;
     border: none;
     height: 30px;
-  }
-  ul.signUpform button:hover {
+}
+
+ul.signUpform button:hover {
     background-color: rgb(29, 145, 165);
-  }
-  
-  ul.signUpform li input:hover {
+}
+
+ul.signUpform li input:hover {
     width: 250px;
     border-color: rgb(162, 0, 255);
-  }
-  
+}
+
+#Alerts {
+    position: absolute;
+    color: red;
+    padding-left: 13%;
+}
+
+#Alerts2 {
+    position: absolute;
+    color: red;
+    padding-left: 8%;
+}
