added timer and form validation

--- a/styles/RegistForms.css
+++ b/styles/RegistForms.css
@@ -37,15 +37,28 @@
     color: #d3d9a5;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 0 0 10px #814300;
+    transform: scale(1.2);
+    animation: pulse2 2s infinite;
+}
+@keyframes pulse2 {
+    0% {
+        transform: scale(0.95);
+        text-shadow: 0 0 0 0 rgba(141, 92, 0, 0.7);
+    }
+    70% {
+        transform: scale(1.2);
+        text-shadow: 0 0 0 20px rgba(255, 202, 30, 0);
+    }
+    100% {
+        transform: scale(0.95);
+        text-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
 }
 
 p#loggedIn {
-    text-align: center;
-    /* border: 1px solid white; */
-    box-shadow: 0 10px 10px black;
-    border-top: none;
-    border-right: none;
-    border-left: none;
+    text-align: left;
+    text-shadow: 0 10px 10px black;
 }
 
 .formContainer {
