--- a/styles/Game.css
+++ b/styles/Game.css
@@ -165,8 +165,8 @@ replaces startScreen when button is pressed
     color: rgb(255, 181, 103);
     letter-spacing: 10px;
     position: absolute;
-    margin-left: 42%;
-    margin-top: -23%;
+    margin-left: 41%;
+    margin-top: 24%;
     text-shadow: 0 10px 10px black;
     font-size: 55px;
 }
@@ -178,8 +178,8 @@ replaces startScreen when button is pressed
     display: none;
     width: 200px;
     height: 60px;
-    margin-left: 42%;
-    margin-top: -23%;
+    margin-left: 41%;
+    margin-top: 24%;
     box-shadow: 0 0 10px #814300;
     transform: scale(1);
     animation: pulse 2s infinite;
@@ -220,8 +220,8 @@ replaces startScreen when button is pressed
 #BarContainer {
     display: none;
     position: absolute;
-    margin-left: 40%;
-    margin-top: -24%;
+    margin-left: 41%;
+    margin-top: 23%;
 }
 
 #myProgress {
@@ -240,24 +240,13 @@ replaces startScreen when button is pressed
     background-color: red;
 }
 
-#Clear {
-    background-image: url("assets/delete.png");
-    background-size: contain;
-    height: 60px;
-    width: 60px;
-    position: absolute;
-    margin-left: 50%;
-    margin-top: 42%;
-    display: none;
-}
-
 #GameOver {
     text-align: center;
     display: none;
     position: absolute;
     width: 490px;
     height: 377px;
-    margin-top: -34%;
+    margin-top: 11%;
     margin-left: 31%;
     box-shadow: 0 10px 10px black;
     background-image: url("../assets/Gameover.png");
@@ -288,7 +277,7 @@ replaces startScreen when button is pressed
     position: absolute;
     width: 490px;
     height: 377px;
-    margin-top: -34%;
+    margin-top: 11%;
     margin-left: 31%;
     box-shadow: 0 10px 10px black;
     background-image: url("../assets/Gameover.png");
@@ -326,7 +315,7 @@ canvas {
     width: 100%;
     height: 200px;
     background-color: #5c3c4c;
-    margin-top: 10%;
+    margin-top: 60%;
 }
 
 #footer>div {
@@ -396,7 +385,7 @@ canvas {
     display: none;
     position: absolute;
     margin-left: 29%;
-    margin-top: -10%;
+    margin-top: 40%;
 }
 
 #levelProg{
@@ -411,8 +400,18 @@ canvas {
     font-size: 12px;
     text-align: center;
     color: white;
-    /* padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px; */
+
+}
+/* game timer */
+#timer{
+
+    position: absolute;
+    margin-left: 25%;
+    margin-top: 13%;
+    color: white;
+    font-size: 20px;
+    width: 150px;
+    height: 40px;
+
 
 }
